--- a/app/src/main/res/layout/fragment_tag.xml
+++ b/app/src/main/res/layout/fragment_tag.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.veryworks.iyeongjun.hkapp.TagFragment">
+    tools:context="com.veryworks.iyeongjun.hkapp.TournamentFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
